--- a/app/src/main/res/layout/item_crud_content.xml
+++ b/app/src/main/res/layout/item_crud_content.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.cardview.widget.CardView
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="16dp"
@@ -51,6 +52,7 @@
                 android:layout_marginTop="10dp">
 
                 <Button
+                    android:id="@+id/btn_view"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
                     android:text="LIHAT"
