--- a/app/src/main/res/layout/item_slide_article.xml
+++ b/app/src/main/res/layout/item_slide_article.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
+    android:id="@+id/clickCard"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -15,7 +16,8 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
+        <ImageButton
+            android:id="@+id/btn_image"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_gravity="center_vertical"
@@ -32,7 +34,7 @@
             android:padding="10dp">
 
             <TextView
-                android:id="@+id/tv_Artikel"
+                android:id="@+id/tv_Title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/color3"
@@ -45,7 +47,9 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/color4"
                 android:textSize="12dp"
-                android:textStyle="italic" />
+                android:textStyle="italic"
+                android:maxLines="3"
+                />
         </LinearLayout>
     </LinearLayout>
 
