--- a/app/src/main/res/layout/activity_artikel.xml
+++ b/app/src/main/res/layout/activity_artikel.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".viewArtikel"
+    tools:context=".Artikel_Activity"
     android:orientation="vertical">
 
     <ScrollView
