--- a/app/src/main/res/layout/activity_view_article.xml
+++ b/app/src/main/res/layout/activity_view_article.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".insertContent"
+    tools:context=".viewContent"
     android:orientation="vertical">
 
     <ScrollView
@@ -32,7 +32,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginRight="16dp"
-                android:text="Manajemen Konten :"
+                android:text="Manajemen Artikel :"
                 android:textColor="@color/color3"
                 android:textSize="12dp"
                 android:textStyle="bold" />
@@ -57,11 +57,11 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/color4"
                         android:textSize="12dp"
-                        android:text="Judul Konten"/>
+                        android:text="Judul Artikel"/>
 
                     <EditText
                         android:id="@+id/edt_title_content"
-                        android:hint="Masukkan Judul Konten"
+                        android:hint="Masukkan Judul Artikel"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="16dp"
@@ -92,32 +92,42 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/color4"
                         android:textSize="12dp"
-                        android:text="Isi Konten"/>
+                        android:text="Isi Artikel"/>
 
                     <EditText
-                        android:id="@+id/edt_body_content"
-                        android:hint="Masukkan Isi Konten"
+                        android:id="@+id/edt_content"
+                        android:hint="Masukkan Isi Artikel"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="16dp"
                         android:textColor="@color/color3"
                         android:inputType="text|textMultiLine"/>
 
-
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
 
             <Button
-                android:id="@+id/btn_add_content"
+                android:id="@+id/btn_update_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="SIMPAN KONTEN"
+                android:text="UBAH ARTIKEL"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
                 android:background="@drawable/button_1"
                 android:textColor="@color/colorWhite"/>
+
+            <Button
+                android:id="@+id/btn_delete_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="HAPUS ARTIKEL"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/button_3"
+                android:textColor="@color/color5"/>
         </LinearLayout>
     </ScrollView>
 
