--- a/app/src/main/res/layout/activity_view_article.xml
+++ b/app/src/main/res/layout/activity_view_article.xml
@@ -60,7 +60,7 @@
                         android:text="Judul Artikel"/>
 
                     <EditText
-                        android:id="@+id/edt_title_content"
+                        android:id="@+id/edt_title_article"
                         android:hint="Masukkan Judul Artikel"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -95,7 +95,7 @@
                         android:text="Isi Artikel"/>
 
                     <EditText
-                        android:id="@+id/edt_content"
+                        android:id="@+id/edt_body_article"
                         android:hint="Masukkan Isi Artikel"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -108,7 +108,7 @@
             </androidx.cardview.widget.CardView>
 
             <Button
-                android:id="@+id/btn_update_content"
+                android:id="@+id/btn_update_article"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="UBAH ARTIKEL"
@@ -119,7 +119,7 @@
                 android:textColor="@color/colorWhite"/>
 
             <Button
-                android:id="@+id/btn_delete_content"
+                android:id="@+id/btn_delete_article"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="HAPUS ARTIKEL"
