--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,11 +38,11 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/color4"
                 android:textSize="12dp"
-                android:text="Email"/>
+                android:text="Username"/>
 
             <EditText
                 android:id="@+id/edt_userid"
-                android:hint="Masukkan Email"
+                android:hint="Masukkan Username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
